about img corrected for text wrap

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -102,6 +102,10 @@ opacity: 0.5;
 .images-relative {
   position: relative;
 }
+.img-uniq {
+  max-width: 40%;
+  margin-right: 20px;
+}
 .absolute1, .absolute3, .absolute5 {
   position: absolute;
   top: 60%;
